--- a/C0619I1_Luong_tuan_anh/luyen_tao_va_su_dung_ham_02/bài4.html
+++ b/C0619I1_Luong_tuan_anh/luyen_tao_va_su_dung_ham_02/bài4.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-
+<script>
+    let a =prompt("nhập số: ");
+    function check() {
+        if (a == null){
+            alert(a + " true ");
+            return true;
+        } else {
+            alert(a + "false");
+            return false;
+        }
+    }
+    check()
+</script>
 </body>
 </html>
